--- a/dev/client/index.html
+++ b/dev/client/index.html
@@ -26,14 +26,12 @@
                                     <div class="czatInfo">Połączenie z serwerem nawiązane 2017-12-07 17:29:40</div>
                                     <div class="chatUserConnectionInfo"> 2017-14-20 17:30:40 Użytkownik Alicja połączony</div>
                                     <div class="myMessage">
-                                        <div class="messageTitle">2017-12-03 14:40:59 -
-                                            <div>Alicja</div>
+                                        <div class="messageTitle">2017-12-03 14:40:59 - <div>Alicja</div>
                                         </div>
-                                        <div class="messageText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, amet! </div>
+                                        <div class="messageText">Lorem ipsum dolo<br>r sit amet consectetur adipisicing elit. Dolorem, amet! </div>
                                     </div>
                                     <div class="othersMessage">
-                                        <div class="messageTitle">2017-12-03 14:40:59 -
-                                            <div>Alicja</div>
+                                        <div class="messageTitle">2017-12-03 14:40:59 -<div>Alicja</div>
                                         </div>
                                         <div class="messageText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, amet! </div>
                                     </div>
