--- a/dev/client/index.html
+++ b/dev/client/index.html
@@ -40,9 +40,14 @@
             <div class="chatSendButton">wyślij</div>
         </div>
         <div class="chatUserContainer">
-                                    <div class="user" data-user-nick="Mikołaj">Mikołaj</div>
-                                    <div class="user" data-user-nick="Paweł">Paweł</div>
-                                    <div class="user" data-user-nick="Alicja">Alicja</div>
+            <div class="chatUserHideButton"><div>Schowaj</div></div>
+            <div class="chatUserList">
+                    <!-- <div class="chatUserHideButton">Schowaj</div> -->
+                    <div class="user" data-user-nick="Mikołaj">Mikołaj</div>
+                    <div class="user" data-user-nick="Paweł">Paweł</div>
+                    <div class="user" data-user-nick="Alicja">Alicja</div>
+            </div>
+             <div class="chatUserDeployButton"><div>Użytkownicy</div></div>
         </div>
         <script src="js/main.js"></script>
 </body>
