--- a/dev/client/index.html
+++ b/dev/client/index.html
@@ -48,6 +48,7 @@
             </div>
              <div class="chatUserDeployButton"><div>Użytkownicy</div></div>
         </div>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
         <script src="js/main.js"></script>
 </body>
 
