Dodanie validacji loginu

--- a/dev/client/index.html
+++ b/dev/client/index.html
@@ -16,14 +16,14 @@
 
 <body>
     <div class="loginContainer">
-        <div class="errorInfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="errorInfo"></div>
         <input id="login" type="text" name="nick" placeholder="Wpisz nick" maxlength="20" autofocus>
         <div id="loginButton">Zatwierdź</div>
     </div>
     <div class="czatContainer">
         <div class="czatContent">
             <div class="chat">
-                                    <div class="czatInfo">Połączenie z serwerem nawiązane 2017-12-07 17:29:40</div>
+                                    <!-- <div class="czatInfo">Połączenie z serwerem nawiązane 2017-12-07 17:29:40</div>
                                     <div class="chatUserConnectionInfo"> 2017-14-20 17:30:40 Użytkownik Alicja połączony</div>
                                     <div class="myMessage">
                                         <div class="messageTitle">2017-12-03 14:40:59 - <div>Alicja</div>
@@ -34,7 +34,7 @@
                                         <div class="messageTitle">2017-12-03 14:40:59 -<div>Alicja</div>
                                         </div>
                                         <div class="messageText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, amet! </div>
-                                    </div>
+                                    </div> -->
             </div>
             <textarea id="czatTextArea" placeholder="Wpisz wiadomość" autofocus></textarea>
             <div class="chatSendButton">wyślij</div>
@@ -42,9 +42,9 @@
         <div class="chatUserContainer">
             <div class="chatUserHideButton"><div>Schowaj</div></div>
             <div class="chatUserList">
-                                    <div class="user" data-user-nick="Mikołaj">Mikołaj</div>
+                                    <!-- <div class="user" data-user-nick="Mikołaj">Mikołaj</div>
                                     <div class="user" data-user-nick="Paweł">Paweł</div>
-                                    <div class="user" data-user-nick="Alicja">Alicja</div>
+                                    <div class="user" data-user-nick="Alicja">Alicja</div> -->
             </div>
              <div class="chatUserDeployButton"><div>Użytkownicy</div></div>
         </div>
